<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AnglersGuide</string>
    <string name="button_addFishingSpot">Add Fishing Spot</string>
    <string name="hint_fishingspotTitle">Fishing Spot Title</string>
    <string name="hint_fishingspotDescription">Description </string>
    <string name="menu_addFishingSpot">Add</string>
    <string name="menu_cancelFishingSpot">Cancel</string>
    <string name="save_fishingspot"> Save Fishing Spot </string>
    <string name="update_fishingspot"> Update Fishing Spot </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_fishingspot_image">Select placemark image</string>
    <string name="change_fishingspot_image">Change fishingspot image</string>
    <string name="take_fishingspot_image"> Take Picture </string>
    <string name="take_new_fishingspot_image"> Take New Picture </string>
    <string name="button_location">Set Location</string>
    <string name="button_update_location">Update Location</string>
    <string name="title_activity_map">MapActivity</string>ß

    <string name="summaryTitle">Welcome User</string>
    <string name="summarySubtitle">Give Summary of your Activity</string>
    <string name="locationtoBeSelected">Select FishingSpot :</string>
    <string name="hint_location">Which fishing spot ?</string>
    <string name="addButton">Add</string>
    <string name="date">Date:</string>
    <string name="setDate">Set Date</string>
    <string name="hint_weatherSummary">What\'s the weather like ?</string>
    <string name="weather">Weather:</string>
    <string name="weatherDesc">Weather:</string>
    <string name="amountCaught">Enter No. Fish Caught</string>
    <string name="tide">Tide Conditions:</string>
    <string name="ratingStars">Location Rating:</string>
    <string name="tideIn">Tide In</string>
    <string name="tideOut">Tide Out</string>
    <string name="fishingSpotRating">Rating</string>

    <string name="action_fishingSpot">List FishingSpots</string>
    <string name="action_Explore">Explore</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="action_summarise">Summarise</string>
    <string name="action_addFishingSpot">Add Fishing Spot</string>


    <string name="all_markers_view">Explore</string>

    <string name="nav_header_title">Anglers Guide</string>
    <string name="nav_header_subtitle">angler1@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="aboutUs">App For People that Fish and want to log and share their Hauls !</string>
    <string name="FishingSpotsNotFound">No Spots Yet…\nTell us about a Spot!</string>

    <string name="messageLoading">Please Wait while the FishingSpots are Loading...</string>
    <string name="select_profile_image">Select Profile Image</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>


    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>