<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.FishingSpotFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="148dp"
            android:layout_marginBottom="-148dp">


            <EditText
                android:id="@+id/fishingspotTitle"
                android:layout_width="248dp"
                android:layout_height="57dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:autofillHints=""
                android:hint="@string/hint_fishingspotTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description"
                android:layout_width="249dp"
                android:layout_height="62dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:hint="@string/hint_fishingspotDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fishingspotTitle" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="95dp"
                android:layout_height="19dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:text="00.000000"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/lng"
                android:layout_width="92dp"
                android:layout_height="19dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="28dp"
                android:text="00.000000"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat" />

            <Button
                android:id="@+id/takeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="93dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/take_fishingspot_image"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@+id/description"
                tools:layout_editor_absoluteX="16dp" />


            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                app:layout_constraintTop_toBottomOf="@+id/takeImage"
                app:layout_constraintVertical_bias="0.84"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/fishingspotImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/chooseImage"
                app:layout_constraintTop_toBottomOf="@+id/takeImage"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addFishingSpot"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeImage"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="90dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="84dp"
                    android:text="Location"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/fishingspotTitle"
                    app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>